--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mapbox/react-map-gl": "^4.2.0-dev",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
@@ -22,10 +23,12 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl-geocoder": "^2.2.0",
+    "reactstrap": "^9.2.2",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
